# yodume-checker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/yozume_checker/: __init__.py  checker.py  cli.py  engine.py  models.py
tests/: test_checker.py  test_engine.py
